[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "galv-harvester"
dynamic = ["version"]
description = ''
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Matt Jaquiery", email = "matt.jaquiery@dtc.ox.ac.uk" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Natural Language :: English",
]

keywords = ["galv", "battery", "cycler"]

dependencies = [
    "click~=8.1.3",
    "requests~=2.28.1",
    "pandas~=2.2.1",
    "dask[complete] > 2023.5.0",
    "fastnumbers~=5.1.0",
    "galvani ~= 0.4.1",
    "maya~=0.6.1",
    "xlrd~=2.0.1",
    "psutil~=5.9.4",
    "holoviews~=1.18.3",
    "matplotlib~=3.9.0",
    "datashader~=0.16.1",
]

[project.urls]
Documentation = "https://github.com/unknown/galv-harvester#readme"
Issues = "https://github.com/unknown/galv-harvester/issues"
Source = "https://github.com/unknown/galv-harvester"

[project.scripts]
galv-harvester = "galv_harvester.start:click_wrapper"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/.harvester",
    "/.schema",
    "/.venv",
    "/.vscode"
]

[tool.hatch.build.targets.wheel]
packages = ["src/galv_harvester"]

[tool.hatch.version]
path = "src/galv_harvester/__about__.py"

[tool.hatch.envs.default]
# Allow PyCharm to detect the virtual environment interpreter
type = "virtual"
path = ".venv"
dependencies = [
    "coverage[toml]>=6.5",
    "pytest",
    "build"
]

[[tool.hatch.envs.default.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]
test-cli = "galv-harvester --help"
build = "python -m build"  # Build the package in a way we can specify the environment

[tool.hatch.envs.types]
dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/galv_harvester tests}"

[tool.coverage.run]
source_pkgs = ["galv_harvester", "tests"]
branch = true
parallel = true
omit = [
    "src/galv_harvester/__about__.py",
]

[tool.coverage.paths]
galv_harvester = ["src/galv_harvester", "*/galv-harvester/src/galv_harvester"]
tests = ["tests", "*/galv-harvester/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
